fix:fix NullPointerException error when using RestTemplate with no label.